# event-counter

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yaml
core/: __main__.py  report.py  schema.py
resources/: schema.yaml
tests/: test_report.py  test_schema.py  test_smoke.py
tests/data/: example_events.text  test_schema.yaml
